--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,6 +24,9 @@
                         <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                     </li>
                     {% endif %}{% endfor %}
+                    <li>
+                        <a href="https://www.gitbook.com/@vincentmi">GitBook</a>
+                    </li>
                 </ul>
             </div>
         </div>
