--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -232,7 +232,7 @@ this.page.identifier = "{{page.id}}"; // Replace PAGE_IDENTIFIER with your page'
 
 (function() { // DON'T EDIT BELOW THIS LINE
 var d = document, s = d.createElement('script');
-s.src = 'https://' + disqus_username  + '.disqus.com/embed.js';
+s.src = 'https://' + '{{site.disqus_username}}'  + '.disqus.com/embed.js';
 s.setAttribute('data-timestamp', +new Date());
 (d.head || d.body).appendChild(s);
 })();
