--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -624,10 +624,10 @@ pre code {
   margin-bottom: 10px;
 }
 .post-preview > .post-meta {
-  font-family: 'Lora', 'Times New Roman', serif;
+  font-family: 'Verdana', 'Times New Roman', serif;
   color: #808080;
-  font-size: 16px;
-  font-style: italic;
+  font-size: 12px;
+  font-style: normal;
   margin-top: 0;
 }
 .post-preview > .post-meta > a {
@@ -649,12 +649,12 @@ pre code {
     font-size: 16px;
   }
   .post-preview .post-meta {
-    font-size: 18px;
+    font-size: 12px;
   }
 }
 .post-content-preview {
   font-size: 13px;
-  font-style: italic;
+  font-style: normal;
   color: #a3a3a3;
 }
 .post-content-preview:hover {
