--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -309,7 +309,7 @@ pre code {
 }
 .post-container .pager li > a > span {
   color: #808080;
-  font-weight: normal;
+  font-weight: 200;
   letter-spacing: 0.5px;
 }
 @media only screen and (max-width: 767px) {
@@ -801,11 +801,11 @@ form .row:first-child .floating-label-form-group {
   line-height: 1.7;
   text-transform: uppercase;
   font-size: 13px;
-  font-weight: 800;
+  font-weight: 300;
   letter-spacing: 1px;
   padding: 10px;
   background-color: white;
-  border-radius: 0;
+  border-radius: 1;
 }
 @media only screen and (min-width: 768px) {
   .pager li > a,
@@ -820,8 +820,8 @@ form .row:first-child .floating-label-form-group {
 .pager li > a:hover,
 .pager li > a:focus {
   color: white;
-  background-color: #0085a1;
-  border: 1px solid #0085a1;
+  background-color: #969c9e;
+  border: 1px solid #969c9e;
 }
 .pager li > a:hover > span,
 .pager li > a:focus > span {
