--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,7 +26,7 @@
                     {% endif %}{% endfor %}
                     
                     <li>
-                        <a href="https://www.gitbook.com/@vincentmi">GitBook</a>
+                        <a href="https://legacy.gitbook.com/@vincentmi">GitBook</a>
                     </li>
                 </ul>
             </div>
