--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,6 +28,12 @@
                     <li>
                         <a href="https://legacy.gitbook.com/@vincentmi">GitBook</a>
                     </li>
+
+                    <li>
+                        <a href="https://vincentmi.github.io/json2swg/">JSON2SWG</a>
+                    </li>
+
+                    
                 </ul>
             </div>
         </div>
