--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,11 +26,11 @@
                     {% endif %}{% endfor %}
                     
                     <li>
-                        <a href="https://legacy.gitbook.com/@vincentmi">GitBook</a>
+                        <a href="https://legacy.gitbook.com/@vincentmi" target="_blank">GitBook</a>
                     </li>
 
                     <li>
-                        <a href="https://vincentmi.github.io/json2swg/">JSON2SWG</a>
+                        <a href="https://vincentmi.github.io/json2swg/" target="_blank">JSON2SWG</a>
                     </li>
 
                     
