--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -120,6 +120,11 @@ layout: default
                     {% endfor %}
                 </ul>
                 {% endif %}
+                 <hr>
+                <h5>赞赏</h5>
+                <div class="short-about">
+                    <img src="img/donate.png" width="300" height="300" />    
+                </div>
     		</div>
         {% endif %}
 	</div>
