--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -159,7 +159,7 @@ layout: default
                 <hr>
                 <h5>赞赏</h5>
                 <div class="tags">
-                    <img src="img/donate.png" border="0" with="300" height="300" />
+                    <img src="/img/donate.png" border="0" with="300" height="300" />
                 </div>
 
             </div>
