--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -160,6 +160,12 @@ layout: default
                     {% endfor %}
                 </ul>
                 {% endif %}
+
+                <hr>
+                <h5>赞赏</h5>
+                <div class="tags">
+                    <img src="/img/donate.png" border="0" with="300" height="300" />
+                </div>
             </div>
         </div>
     </div>
