--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -123,7 +123,7 @@ layout: default
                  <hr>
                 <h5>赞赏</h5>
                 <div class="short-about">
-                    <img src="img/donate.png" width="300" height="300" />    
+                    <img src="/img/donate.png" width="300" height="300" />    
                 </div>
     		</div>
         {% endif %}
