--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -164,7 +164,7 @@ layout: default
                 <hr>
                 <h5>赞赏</h5>
                 <div class="tags">
-                    <img src="/img/donate.png" border="0" width="300" height="300" />
+                    <img src="/img/donate.png" style="width:200px;height:200px;" border="1" />
                 </div>
             </div>
         </div>
