add codesketch link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,6 +26,9 @@
                     {% endif %}{% endfor %}
                     
                     <li>
+                        <a href="https://github.com/vincentmi/codesketch" target="_blank">CodeSketch</a>
+                    </li>
+                    <li>
                         <a href="https://legacy.gitbook.com/@vincentmi" target="_blank">GitBook</a>
                     </li>
 
