--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -104,6 +104,8 @@ layout: default
                 {% endif %}
 
             </div>  
+ 
+    
 
     <!-- Side Catalog Container -->
         {% if page.catalog %}
@@ -159,7 +161,7 @@ layout: default
                 <hr>
                 <h5>赞赏</h5>
                 <div class="tags">
-                    <img src="/img/donate.png" border="0" width="300" height="300" />
+                    <img src="/img/donate.png" border="0" style="witdh:100%;height:auto" />
                 </div>
 
             </div>
