--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,17 @@
 <!-- Footer -->
 <footer>
     <div class="container">
+    <div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1" style="text-align: center;padding-bottom:10px">
+  
+                    <form action="/search/" method="get">
+   
+                    <input type="text" name="q" class="form-control" placeholder="关键字" style="width:50%;display:inline-block">
+
+                    <button type="submit" class="btn" style="display:inline-block">搜索</button>
+                    </form>
+    </div>
+    </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <ul class="list-inline text-center">
