--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,13 @@
 <!-- hack iOS CSS :active style -->
 <body ontouchstart="">
 
+
+
     {% include nav.html %}
 
     {{ content }}
+   
+  </div>
 
     {% include footer.html %}
 
