--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -161,7 +161,17 @@ layout: default
                 <hr>
                 <h5>赞赏</h5>
                 <div class="tags">
-                    <img src="/img/donate.png" border="0" style="width:100%;height:auto" />
+                    <img src="/img/donate.png" border="0" style="width:120px;height:auto" />
+                </div>
+                <div>
+                    <script>
+                    (function (w,d,s,o,f,js,fjs) {
+                        w['Otechie-Widget']=o;w[o] = w[o] || function () { (w[o].q = w[o].q || []).push(arguments) };
+                        js = d.createElement(s), fjs = d.getElementsByTagName(s)[0];
+                        js.id = o; js.src = f; js.async = 1; fjs.parentNode.insertBefore(js, fjs);
+                    }(window, document, 'script', 'ow', 'https://widget.otechie.com/widget.js'));
+                    ow('init', { username: 'vnzdev' });
+                </script>
                 </div>
 
             </div>
