--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,6 +60,11 @@ layout: default
 
 				{{ content }}
 
+                <br/>
+
+                Published At: {{page.date}}
+
+
                 <hr>
 
 
