--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -166,7 +166,7 @@ layout: default
                 <hr>
                 <h5>赞赏</h5>
                 <div class="tags">
-                    <img src="/img/donate.png" border="0" style="width:120px;height:auto" />
+                    <img src="/img/donate.png" border="0" style="width:100%%;height:auto" />
                 </div>
             </div>
         </div>
