--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -261,3 +261,5 @@
     ow('init', { username: 'vnzdev' });
 </script>
 
+<script async src="https://cdn.bootcdn.net/ajax/libs/mathjax/2.7.9/MathJax.min.js?config=TeX-AMS-MML_CHTML"></script>
+
