--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -260,6 +260,5 @@
     }(window, document, 'script', 'ow', 'https://widget.otechie.com/widget.js'));
     ow('init', { username: 'vnzdev' });
 </script>
-
-<script async src="https://cdn.bootcdn.net/ajax/libs/mathjax/2.7.9/MathJax.min.js?config=TeX-AMS-MML_CHTML"></script>
+<script async src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS-MML_CHTML"></script>
 
