--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -260,5 +260,5 @@
     }(window, document, 'script', 'ow', 'https://widget.otechie.com/widget.js'));
     ow('init', { username: 'vnzdev' });
 </script>
-<script async src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS-MML_CHTML"></script>
+<script async src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS_CHTML"></script>
 
