--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,4 +42,8 @@
 
     <!-- ga & ba script hoook -->
     <script></script>
+    <script type="text/x-mathjax-config">
+MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+</script>
+<script async src="https://cdn.jsdelivr.net/npm/mathjax@2/MathJax.js?config=TeX-AMS_CHTML"></script>
 </head>
