--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,5 +41,12 @@
     <![endif]-->
 
     <!-- ga & ba script hoook -->
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});</script>
+    <script type="text/x-mathjax-config">
+    MathJax.Hub.Config(
+        {
+            tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+            messageStyle: 'none'
+        }
+    );
+    </script>
 </head>
