--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -504,6 +504,7 @@ pre code {
   -o-background-size: cover;
   margin-bottom: 0px;
   /* 0 on mobile, modify by Hux */
+  text-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 @media only screen and (min-width: 768px) {
   .intro-header {
