--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,7 +62,7 @@ layout: default
 
                 <br/>
 
-                Published At: {{page.date}}
+                <p class="meta" style="font-size:11px;color:#999;text-align:center;font-weight:400">--- Published At  {{page.date}} --- </p>
 
 
                 <hr>
@@ -164,9 +164,9 @@ layout: default
                 {% endif %}
 
                 <hr>
-                <h5>赞赏</h5>
+                <h5>DONATIONS</h5>
                 <div class="tags">
-                    <img src="/img/donate.png" border="0" style="width:100%%;height:auto" />
+                    <img src="/img/donate.png"  style="border-width:0px;width:100%;height:auto" />
                 </div>
             </div>
         </div>
