--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -124,7 +124,12 @@ layout: default
                  <hr>
                 <h5>赞赏</h5>
                 <div class="short-about">
-                    <img src="/img/donate.png" style="width:200px;height:200px;" border="1" />    
+                    <img src="/img/donate.png" style="width:200px;height:200px;" />    
+                </div>
+                <hr>
+                <h5>微信公众号</h5>
+                <div class="short-about">
+                    <img src="/img/icwt.jpg" style="width:200px;height:200px;"  />    
                 </div>
     		</div>
         {% endif %}
