--- a/themes/cleanwhite/layouts/partials/footer.html
+++ b/themes/cleanwhite/layouts/partials/footer.html
@@ -272,7 +272,7 @@
 </script>
 
 <!-- push page to Baidu -->
-{{ if .Site.Params.ba_track_id }}
+{{ if .Site.Params.baiduTrackId  }}
 <script>
     (function(){
         var bp = document.createElement('script');
@@ -291,7 +291,7 @@
 <!-- Baidu Tongji -->
 <script>
     // dynamic User by Hux
-    var _baId = '{{ .Site.Params.ba_track_id }}';
+    var _baId = '{{ .Site.Params.baiduTrackId }}';
 
     // Originial
     var _hmt = _hmt || [];
@@ -304,7 +304,7 @@
 </script>
 {{ end }}
 
-{{ if .Site.GoogleAnalytics }}
+{{ if .Site.Params.googleAnalytics }}
 {{ template "_internal/google_analytics_async.html" . }}
 {{ end }}
 
